small fix. Переименовал папку и убрал лишние в yml файле

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -10,11 +10,12 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout code
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Set up Python
-      - uses: actions/setup-python@v5
+        uses: actions/setup-python@v5
         with: 
           python-version: '3.12'
 
@@ -24,6 +25,6 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run Bot
-      - run: python main.py
         env:
-          DISCORD_KEY: ${{ secrets.DISCORD_KEY }} }
+          DISCORD_KEY: ${{ secrets.DISCORD_KEY }}
+        run: python main.py
