Добавлена команда update

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -28,4 +28,9 @@ jobs:
         env:
           DISCORD_KEY: ${{ secrets.DISCORD_KEY }}
           USER_KEY_GITHUB: ${{ secrets.USER_KEY_GITHUB }}
+          POST_PASSWORD_MRP: ${{ secrets.POST_PASSWORD_MRP }}
+          POST_PASSWORD_DEV: ${{ secrets.POST_PASSWORD_DEV }}
+          POST_AUTHORIZATION_MRP: ${{ secrets.POST_AUTHORIZATION_MRP }}
+          POST_AUTHORIZATION_DEV: ${{ secrets.POST_AUTHORIZATION_DEV }}
+          POST_USER_AGENT: ${{ secrets.POST_USER_AGENT }}
         run: python main.py
